--- a/registration-form.html
+++ b/registration-form.html
@@ -14,15 +14,21 @@
             <p>Please enter your Informations to register.</p>
           </div>
         </div>
-        <form class="login-form">
-          <input type="text" placeholder="first name" name="first_name"/>
-          <input type="text" placeholder="last name"/>
-          <input type="text" placeholder="username"/>
-          <input type="password" placeholder="password" id="password"/>
-          <input type="password" placeholder="confirm password" id="confirmPassword"/>
-          <button type="submit" class="btn" onclick="passwordConfirmation()" >REGISTER</button>
+        <form class="login-form" name="form1">
+          <p id="form-errorfname"></p>
+          <input type="text" placeholder="first name" id="first_name" />
+          <p id="form-errorlname"></p>
+          <input type="text" placeholder="last name" id="last_name"/>
+          <p id="form-erroruname"></p>
+          <input type="text" placeholder="username" id="username"/>
+          <p id="form-errorpass"></p>
+          <input type="password" placeholder="password" name="password" id="password"/>
+          <p id="form-errorcpass"></p>
+          <input type="password" placeholder="confirm password" name="confirm_password" id="confirmPassword"/>
+          <button type="submit" class="btn" onclick="formValidation()" >REGISTER</button>
         </form>
       </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
