--- a/registration-form.html
+++ b/registration-form.html
@@ -15,15 +15,20 @@
           </div>
         </div>
         <form class="login-form" name="form1">
-          <input type="text" placeholder="first name" id="first_name" />
+          <input type="text" placeholder="first name" id="first_name"/>
+          <div id="errFn"></div>
           <input type="text" placeholder="last name" id="last_name"/>
+          <div id="errLn"></div>
           <input type="text" placeholder="username" id="username"/>
+          <div id="errUn"></div>
           <input type="password" placeholder="password" name="password" id="password"/>
+          <div id="errP"></div>
           <input type="password" placeholder="confirm password" name="confirm_password" id="confirmPassword"/>
+          <div id="errCp"></div>
           <button type="submit" class="btn" onclick="formValidation()" >REGISTER</button>
         </form>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script5.js"></script>
 </body>
 </html>
