--- a/registration-form.html
+++ b/registration-form.html
@@ -10,7 +10,7 @@
       <div class="form">
         <div class="login">
           <div class="login-header">
-            <h3>REGISTRATION</h3>
+            <h2>REGISTRATION</h2>
             <p>Please enter your Informations to register.</p>
           </div>
         </div>
@@ -29,6 +29,6 @@
         </form>
       </div>
     </div>
-    <script src="script5.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
