--- a/Activity5-Bootstrap/Resume.html
+++ b/Activity5-Bootstrap/Resume.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+    <body>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -21,103 +21,231 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
       <!-- nav bar -->
-    <div class="d-flex">
-    <div class="flex-fill">
-    <div class="navbar container-fluid">
-        <a href="index.html">
-        <nav class="d-flex flex-row">
-            <div class="roundYellow rounded-circle mt-1"></div>
-                <p class="fs-4 fw-bold">Nicol Rider</p>
-              <span class="fEditor ml-sm">Editor</span>
-        </nav>
-    </a>
-          </div>
+        <div class="d-flex">
+            <div class="flex-fill">
+                <div class="navbar container-fluid">
+                    <a href="index.html">
+                        <nav class="d-flex flex-row">
+                            <div class="roundYellow rounded-circle mt-1"></div>
+                                <p class="fs-4 fw-bold">Nicol Rider</p>
+                            <span class="fEditor ml-sm">Editor</span>
+                        </nav>
+                    </a>
+                </div>
+            </div>
+            <div class="d-flex flex-row flex-fill">
+            <div class="navbar container-fluid d-flex flex-row-reverse">
+                <nav class="d-flex flex-row-reverse navbar-expand-md">
+                <ul class="navbar-nav me-auto d-flex flex-row-reverse">
+                    <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#"> |Contact</a>
+                    </li>
+                    <li class="nav-item ">
+                    <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Resume |</a>
+                    </li>
+                </ul>
+                </nav>
+            </div>
+            </div>
         </div>
-        <div class="d-flex flex-row flex-fill">
-          <div class="navbar container-fluid d-flex flex-row-reverse">
-            <nav class="d-flex flex-row-reverse navbar-expand-md">
-              <ul class="navbar-nav me-auto d-flex flex-row-reverse">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#"> |Contact</a>
-                </li>
-                <li class="nav-item ">
-                  <a class="nav-link" href="#">Projects</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Resume |</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </div>
          <!-- nav bar -->
-        <!-- Resume Container  -->
-    <div >
-            <!-- inner con  -->
-        <div class="mar bStyle d-flex justify-content-between">
-            <!-- Work Experience  -->
-            <div>
-                <h3>Work <br>
-                    Experience</h3>
-
-            </div>
-            <!-- Work Experience  -->
-            <!-- resume content  -->
-            <div class="d-flex justify-content-center">
-                <!-- date content  -->
-                <div class="divTest">
-                    <span class="breakAll">2035 - Present</span>
+         <!-- Resume Main Container  -->
+         <div>
+            <!-- Resume Container  -->
+            <div class="bStyle d-flex justify-content-between">
+                <!-- Work Experience Container  -->
+                <div class="mar50">
+                    <!-- Work Experience Contents  -->
+                    <div class="bStyle w-auto p-3 m-3">
+                        <h3>Work
+                            <br> Experience</h3>
+                    </div>
+                    <!-- Work Experience Contents  -->
+                </div> 
+                <!-- Work Experience Container  -->
+                <!-- Info Container  -->
+                <div class="bStyle mar50">
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Editor</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Writer at Large</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Intern</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
                 </div>
-                <!-- date content  -->
-                <!-- Info Content -->
-                <div class="divTest">
-                    <span>Editor</span>
-                    <span class="breakAll">I'm a paragraph. Click here to
-                         add your own text and edit me. It’s easy. Just click “Edit Text”
-                          or double click me to add your own content and make changes to
-                           the font.</span>
-
+                <!-- Info Container  -->   
+            </div> 
+            <!-- Resume Container  -->
+            <!-- Resume Container  -->
+            <div class="bStyle d-flex justify-content-between">
+                <!-- Work Experience Container  -->
+                <div class="mar50">
+                    <!-- Work Experience Contents  -->
+                    <div class="bStyle w-auto p-3 m-3">
+                        <h3>Education</h3>
+                    </div>
+                    <!-- Work Experience Contents  -->
+                </div> 
+                <!-- Work Experience Container  -->
+                <!-- Info Container  -->
+                <div class="bStyle mar50">
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:2.6em ; font: 18px; width: 16rem">Establishment Name | <br> Master’s Degree</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Establishment Name | <br> Master’s Degree</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Intern</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
                 </div>
-                <!-- Info Content -->
+                <!-- Info Container  -->   
+            </div> 
+            <!-- Resume Container  -->
+            <!-- Resume Container  -->
+            <div class="bStyle d-flex justify-content-between">
+                <!-- Work Experience Container  -->
+                <div class="mar50">
+                    <!-- Work Experience Contents  -->
+                    <div class="bStyle w-auto p-3 m-3">
+                        <h3>Skills 
+                            <br> & Expertise</h3>
+                    </div>
+                    <!-- Work Experience Contents  -->
+                </div> 
+                <!-- Work Experience Container  -->
+                <!-- Info Container  -->
+                <div class="bStyle mar50">
+                    <!-- Info Contents  -->
+                    <div class="bStyle d-flex justify-content-center m-3">
+                        <!-- date Info  -->
+                        <div class="bStyle p-3">
+                            <span>2035 - Present</span>
+                        </div>
+                        <!-- date Info  -->
+                        <!-- text Info  -->
+                        <div class="bStyle p-3">
+                            <span class="fw-bold" style="line-height:1.6em ; font: 18px;">Editor</span>
+                            <p style="font: 16px; width: 23rem;">I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                        </div>
+                        <!-- text Info  -->
+                    </div>
+                    <!-- Info Contents  -->
+                </div>
+                <!-- Info Container  -->   
+            </div> 
+            <!-- Resume Container  -->
+         </div>
+         <!-- Resume Main Container  -->
+        
 
-            </div>
-            <!-- resume content  -->
-        </div>
-        <!-- inner con  -->
-    </div>
-    <!-- Resume Container  -->
-        <!-- Footer  -->
+            <!-- Footer  -->
         <div class="bStyle d-flex justify-content-between pad8">
-           <!-- Footer1  -->
-          <div class="bStyle d-flex flex-column mar">
-            <span class="fw-bold">Phone</span>
-            <span>123-456-7890</span>
-          </div>
-          <!-- Footer1  -->
+            <!-- Footer1  -->
+            <div class="bStyle d-flex flex-column mar">
+                <span class="fw-bold">Phone</span>
+                <span>123-456-7890</span>
+            </div>
+            <!-- Footer1  -->
 
-          <!-- Footer2  -->
-          <div class="bStyle d-flex flex-column mar"> 
-            <span class="fw-bold">Email</span>
-            <span>info@mysite.com</span>
-          </div>
-          <!-- Footer2  -->
+            <!-- Footer2  -->
+            <div class="bStyle d-flex flex-column mar"> 
+                <span class="fw-bold">Email</span>
+                <span>info@mysite.com</span>
+            </div>
+            <!-- Footer2  -->
 
-          <!-- Footer3  -->
-          <div class="bStyle d-flex flex-column mar">
-            <span class="fw-bold">Follow Me</span>
-            <span>In Twitter</span>
+            <!-- Footer3  -->
+            <div class="bStyle d-flex flex-column mar">
+                <span class="fw-bold">Follow Me</span>
+                <span>In Twitter</span>
 
-          </div>
-          <!-- Footer3  -->
+            </div>
+            <!-- Footer3  -->
 
-          <!-- Footer4  -->
-          <div class="bStyle mar">
-            <span style="font: 16px; line-height: 0.4em; font-size: 13px;">
-               © 2035 By Nicol Rider. <br>
-              Powered and secured by Wix
-            </span>
-
+            <!-- Footer4  -->
+            <div class="bStyle mar">
+                <span style="font: 16px; line-height: 0.4em; font-size: 13px;">
+                © 2035 By Nicol Rider. <br>
+                Powered and secured by Wix
+                </span>
           </div>
         <!-- Footer4 -->
         </div>
