--- a/Activity7/index.html
+++ b/Activity7/index.html
@@ -10,56 +10,56 @@
   </head>
   <body>
  <!-- nav Container  -->
- <nav class=" borderStyle container-fluid sticky-top">
+ <nav class=" borderStyle container-fluid sticky-top bg-light col-11">
     <!-- nav Contents  -->
     <div class="borderStyle row">
         <!-- nav Left  -->
-        <nav class="borderStyle col d-flex flex-row p-3">
-            <a class="navbar-brand m-3" href="#">
-                <img src="Assets/5fca689be85526075db48c1e_havr logo.svg" alt="" srcset="">
-            </a>
-            <!-- drop down button  -->
-            <div class="dropdown m-3 fs-4">
-                <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Product
+        <nav class="borderStyle col p-3">
+            <div class="d-flex flex-row">
+                <a class="navbar-brand m-3 borderStyle" href="#">
+                    <img src="Assets/5fca689be85526075db48c1e_havr logo.svg" alt="" srcset="">
                 </a>
-                <ul class="dropdown-menu m-3 fs-4">
-                  <li><a class="dropdown-item" href="#">Overview</a></li>
-                  <li><a class="dropdown-item" href="#">Hardware</a></li>
-                  <li><a class="dropdown-item" href="#">Mobile app</a></li>
-                  <li><a class="dropdown-item" href="#">BrightLock Manager</a></li>
-                  <li><a class="dropdown-item" href="#">Integration</a></li>
-                </ul>
+                <!-- drop down button  -->
+                <div class="dropdown m-3 fs-4 borderStyle">
+                    <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Product
+                    </a>
+                    <ul class="dropdown-menu m-3 fs-4">
+                      <li><a class="dropdown-item" href="#">Overview</a></li>
+                      <li><a class="dropdown-item" href="#">Hardware</a></li>
+                      <li><a class="dropdown-item" href="#">Mobile app</a></li>
+                      <li><a class="dropdown-item" href="#">BrightLock Manager</a></li>
+                      <li><a class="dropdown-item" href="#">Integration</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown m-3 fs-4 borderStyle">
+                    <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Use Cases
+                    </a>
+                    <ul class="dropdown-menu ">
+                      <li><a class="dropdown-item" href="#">Large Corporations</a></li>
+                      <li><a class="dropdown-item" href="#">Utilities & Construction</a></li>
+                      <li><a class="dropdown-item" href="#">Local business</a></li>
+                      <li><a class="dropdown-item disabled" href="#">Government & Healthcare (coming soon)</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown m-3 col fs-4 borderStyle ">
+                    <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Partner
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Partner with us</a></li>
+                      <li><a class="dropdown-item" href="#">Reseller network</a></li>
+                      <li><a class="dropdown-item" href="#">Login</a></li>
+                    </ul>
+                </div>
+                 <!-- drop down button  -->
             </div>
-
-            <div class="dropdown m-3 fs-4">
-                <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Use Cases
-                </a>
-                <ul class="dropdown-menu ">
-                  <li><a class="dropdown-item" href="#">Large Corporations</a></li>
-                  <li><a class="dropdown-item" href="#">Utilities & Construction</a></li>
-                  <li><a class="dropdown-item" href="#">Local business</a></li>
-                  <li><a class="dropdown-item disabled" href="#">Government & Healthcare (coming soon)</a></li>
-                </ul>
-            </div>
-
-            <div class="dropdown m-3 col fs-4">
-                <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Partner
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Partner with us</a></li>
-                  <li><a class="dropdown-item" href="#">Reseller network</a></li>
-                  <li><a class="dropdown-item" href="#">Login</a></li>
-                </ul>
-            </div>
-             <!-- drop down button  -->
         </nav>
         <!-- nav Left  -->
         <!-- nav Right  -->
-        <nav class="borderStyle col ">
-            <div class="row">
+        <nav class="borderStyle col p-3 d-flex justify-content-end ">
+            <div class="row ">
                 <div class="dropdown m-3 col fs-4">
                     <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Language
@@ -70,16 +70,16 @@
                       <li><a class="dropdown-item" href="#">Spanish</a></li>
                     </ul>
                 </div>
-                <nav class="borderStyle col  m-3 fs-4">
+                <nav class="borderStyle col m-3 fs-4 ">
                     <a class="text-dark" href="#" style="text-decoration: none;">Login</a>
                 </nav>
                 <nav class="borderStyle col m-3 fs-4">
                     <a class="text-dark" href="#" style="text-decoration: none;">Contact</a>
                 </nav>
                 <!-- button  -->
-                <div class="borderStyle2 rounded-pill col m-3 fs-4">
-                    <a  class="text-dark" href="#" style="text-decoration: none;">
-                        <div>
+                <div class="borderStyle2 rounded-pill col fs-4">
+                    <a  class="text-dark d-inline" href="#" style="text-decoration: none; display: block;">
+                        <div class="d-inline-flex p-2" style="white-space: nowrap">
                             Get a Quote
                         </div>
                     </a>
@@ -96,41 +96,51 @@
 
 
   <!-- Heroes -->
-  <div class="img-fluid col" style=" background-image: url('Assets/Door\ hand.jpg');
+  <!-- Heroes Container  -->
+  <div class="">
+    <div class="img-fluid col container" style=" background-image: url('Assets/Door\ hand.jpg');
             background-size: 100%;
             background-repeat: no-repeat;
             max-width: 100%;
             height: auto;">
         <!-- Heroes content  -->
-        <div class="borderStyle row p-6 ">
+        <div class="borderStyle row  ">
             <!-- left column  -->
             <div class="col ">
                 <!-- 1st text  -->
-                <div class="borderStyle p-5">
+                <div class="borderStyle p-5 row">
                     <span class=" text-white fs-16 font-family-sans-serif">
                         Meet BrightLock
                     </span>
                 </div>
                 <!-- 1st text  -->
                 <!-- 2nd text  -->
-                <div class="borderStyle p-5">
+                <div class="borderStyle p-5 row">
                     <h1 class=" text-white fs-1">
                         Access Control Reinvented
                     </h1>
                 </div>
                 <!-- 2nd text  -->
                 <!-- 3rd text  -->
-                <div class="borderStyle p-5"> 
+                <div class="borderStyle p-5 row"> 
                     <h5 class=" text-white fs-3">
                         In 5 minutes, your phone becomes you key
                     </h5>
                 </div>
                 <!-- 3rd text  -->
                 <!-- Buttons  -->
-                <div class="borderStyle p-5">
-                    <span>
-                        In 5 minutes, your phone becomes you key
-                    </span>
+                <div class="borderStyle p-5 row d-flex justify-content-center">
+                   <a href="" class=" col d-flex justify-content-end"">
+                    <div class="borderStyle p-3 bg-light text-dark fw-bold rounded-3">
+                        <img src="Assets/605366dcd8df2041037b8e81_videoask thumbnail.gif" alt="" srcset="">
+                        <Span> Watch Demo</Span>
+                    </div>
+                   </a>
+                   <a href="" class="col d-flex justify-content-start">
+                    <div class="borderStyle p-4 bg-light text-dark fw-bold rounded-3">
+                        Get a Quote
+                    </div>
+                   </a>
                 </div>
                 <!-- Buttons  -->
             </div>
@@ -141,8 +151,12 @@
             </div>
             <!-- right column  -->
         </div>
-    <!-- Heroes contentimg -->
+        <!-- Heroes contentimg -->
+    </div>
+
   </div>
+   <!-- Heroes Container  -->
+  
 
    <!-- Heroes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
