--- a/Activity7/index.html
+++ b/Activity7/index.html
@@ -78,7 +78,7 @@
                 </nav>
                 <!-- button  -->
                 <div class="borderStyle2 rounded-pill col fs-4">
-                    <a  class="text-dark d-inline" href="#" style="text-decoration: none; display: block;">
+                    <a  class="text-dark d-inline" href="#" style="text-decoration: none;">
                         <div class="d-inline-flex p-2" style="white-space: nowrap">
                             Get a Quote
                         </div>
@@ -106,38 +106,38 @@
         <!-- Heroes content  -->
         <div class="borderStyle row  ">
             <!-- left column  -->
-            <div class="col ">
+            <div class="col p-6">
                 <!-- 1st text  -->
-                <div class="borderStyle p-5 row">
-                    <span class=" text-white fs-16 font-family-sans-serif">
+                <div class="borderStyle row p-3">
+                    <span class=" text-white fs-4 font-family-sans-serif">
                         Meet BrightLock
                     </span>
                 </div>
                 <!-- 1st text  -->
                 <!-- 2nd text  -->
-                <div class="borderStyle p-5 row">
-                    <h1 class=" text-white fs-1">
+                <div class="borderStyle row p-3">
+                    <h1 class=" text-white display-1 fw-bold">
                         Access Control Reinvented
                     </h1>
                 </div>
                 <!-- 2nd text  -->
                 <!-- 3rd text  -->
-                <div class="borderStyle p-5 row"> 
+                <div class="borderStyle row p-3"> 
                     <h5 class=" text-white fs-3">
                         In 5 minutes, your phone becomes you key
                     </h5>
                 </div>
                 <!-- 3rd text  -->
                 <!-- Buttons  -->
-                <div class="borderStyle p-5 row d-flex justify-content-center">
-                   <a href="" class=" col d-flex justify-content-end"">
-                    <div class="borderStyle p-3 bg-light text-dark fw-bold rounded-3">
+                <div class="borderStyle d-flex flex-row ">
+                   <a href="" class=" d-flex text-decoration-none">
+                    <div class="borderStyle p-3 m-3 bg-light text-dark fw-bold rounded-3" >
                         <img src="Assets/605366dcd8df2041037b8e81_videoask thumbnail.gif" alt="" srcset="">
                         <Span> Watch Demo</Span>
                     </div>
                    </a>
-                   <a href="" class="col d-flex justify-content-start">
-                    <div class="borderStyle p-4 bg-light text-dark fw-bold rounded-3">
+                   <a href="" class="d-flex text-decoration-none">
+                    <div class="borderStyle p-4 m-3 bg-light text-dark fw-bold rounded-3">
                         Get a Quote
                     </div>
                    </a>
