--- a/Activity7/index.html
+++ b/Activity7/index.html
@@ -98,15 +98,15 @@
   <!-- Heroes -->
   <!-- Heroes Container  -->
   <div class="">
-    <div class="img-fluid col container" style=" background-image: url('Assets/Door\ hand.jpg');
+    <div class="img-fluid col container p-5" style=" background-image: url('Assets/Door\ hand.jpg');
             background-size: 100%;
             background-repeat: no-repeat;
             max-width: 100%;
             height: auto;">
         <!-- Heroes content  -->
-        <div class="borderStyle row  ">
+        <div class="borderStyle row ">
             <!-- left column  -->
-            <div class="col p-6">
+            <div class="col p-6 mt-6 ml-6">
                 <!-- 1st text  -->
                 <div class="borderStyle row p-3">
                     <span class=" text-white fs-4 font-family-sans-serif">
@@ -116,7 +116,7 @@
                 <!-- 1st text  -->
                 <!-- 2nd text  -->
                 <div class="borderStyle row p-3">
-                    <h1 class=" text-white display-1 fw-bold">
+                    <h1 class=" text-white display-3 fw-bold">
                         Access Control Reinvented
                     </h1>
                 </div>
