--- a/Activity7/index.html
+++ b/Activity7/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
  <!-- nav Container  -->
- <nav class=" borderStyle container-fluid sticky-top bg-light col-11">
+ <nav class=" borderStyle sticky-top bg-light">
     <!-- nav Contents  -->
     <div class="borderStyle row">
         <!-- nav Left  -->
@@ -79,7 +79,7 @@
                 <!-- button  -->
                 <div class="borderStyle2 rounded-pill col fs-4">
                     <a  class="text-dark d-inline" href="#" style="text-decoration: none;">
-                        <div class="d-inline-flex p-2" style="white-space: nowrap">
+                        <div class="dflex p-2" style="white-space: nowrap">
                             Get a Quote
                         </div>
                     </a>
@@ -156,9 +156,8 @@
 
   </div>
    <!-- Heroes Container  -->
-  
-
    <!-- Heroes -->
+   <div style="height: 1000px;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
