--- a/Activity7/index.html
+++ b/Activity7/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
  <!-- nav Container  -->
- <nav class=" borderStyle sticky-top bg-light">
+ <nav class=" borderStyle sticky-top bg-light col">
     <!-- nav Contents  -->
     <div class="borderStyle row">
         <!-- nav Left  -->
-        <nav class="borderStyle col p-3">
+        <nav class="borderStyle col p-4">
             <div class="d-flex flex-row">
                 <a class="navbar-brand m-3 borderStyle" href="#">
                     <img src="Assets/5fca689be85526075db48c1e_havr logo.svg" alt="" srcset="">
@@ -58,11 +58,11 @@
         </nav>
         <!-- nav Left  -->
         <!-- nav Right  -->
-        <nav class="borderStyle col p-3 d-flex justify-content-end ">
+        <nav class="borderStyle col p-4 d-flex justify-content-end ">
             <div class="row ">
                 <div class="dropdown m-3 col fs-4">
                     <a class=" dropdown-toggle text-dark" style="text-decoration: none;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Language
+                      En
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">English</a></li>
@@ -77,9 +77,9 @@
                     <a class="text-dark" href="#" style="text-decoration: none;">Contact</a>
                 </nav>
                 <!-- button  -->
-                <div class="borderStyle2 rounded-pill col fs-4">
+                <div class="borderStyle2 rounded-pill col fs-4 p-2">
                     <a  class="text-dark d-inline" href="#" style="text-decoration: none;">
-                        <div class="dflex p-2" style="white-space: nowrap">
+                        <div class="dflex" style="white-space: nowrap">
                             Get a Quote
                         </div>
                     </a>
@@ -91,13 +91,10 @@
         <!-- nav Right  -->
     </div>
     <!-- nav Contents  -->
-</nav>
+ </nav>
   <!-- nav Container  -->
-
-
   <!-- Heroes -->
-  <!-- Heroes Container  -->
-  <div class="">
+  <div class="borderStyle row">
     <div class="img-fluid col container p-5" style=" background-image: url('Assets/Door\ hand.jpg');
             background-size: 100%;
             background-repeat: no-repeat;
@@ -155,9 +152,144 @@
     </div>
 
   </div>
-   <!-- Heroes Container  -->
-   <!-- Heroes -->
-   <div style="height: 1000px;"></div>
+  <!-- Heroes -->
+  <!-- logos  -->
+  <div class="borderStyle d-flex justify-content-center"> 
+
+        <div class="p-4">
+            <span class="">
+                They’ve secured their infrastructure
+            </span>
+        </div>
+        <div class="borderStyle">
+            <img src="Assets/logo1.png" alt="" srcset="">
+        </div>
+        <div class="borderStyle ">
+            <img src="Assets/logo2.png" alt="" srcset="">
+        </div>
+        <div class="borderStyle ">
+            <img src="Assets/logo3.png" alt="" srcset="">
+        </div>
+        <div class="borderStyle ">
+            <img src="Assets/logo4.png" alt="" srcset="">
+        </div>
+        <div class="borderStyle ">
+            <img src="Assets/logo5.png" alt="" srcset="">
+        </div>
+
+  </div>
+  <!-- logos  -->
+  <!-- home Section  -->
+  <div class="borderStyle container bg-gray">
+    <!-- bg image  -->
+    <div class=" col container p-6 img-responsive" style=" background-image: url('Assets/img2.jpg');
+    background-size: 130%;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 100%;" >
+        <!-- home Contents  -->
+        <div class="borderStyle row">
+            <!-- left Home  -->
+            <div class="col">
+                <!-- text 1 -->
+                <div class="borderStyle row p-3 fs-3 fw-bold">
+                    <span>A thousand keys. <br>
+                        On your smartphone. <br>
+                        In your pocket.
+                    </span>
+                </div>
+                <!-- text 1 -->
+                <!-- text 2 -->
+                <div class="borderStyle row p-3 fw-bold">
+                    BrightLock gives you everything you need to share, <br>
+                    manage and monitor thousands of accesses on your <br>
+                    desktop and on your smartphone. <br>
+                </div>
+                <!-- text 2 -->
+                <!-- Line -->
+                <div class="borderStyle row p-3">
+                    <hr style="width: 30%;">
+                </div>
+                <!-- Line -->
+                <!-- button  -->
+                <div class="borderStyle row p-3 d-flex justify-content-start">
+                    <a href="" class="borderStyle d-flex" style="text-decoration: none;" >
+                        <div class="borderStyle  bg-darkgray text-dark p-4 rounded-4" >
+                            <span class="fw-bold" >
+                                Learn More
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <!-- button  -->
+            </div>
+            <!-- left Home  -->
+            <!-- rigth Home  -->
+            <div class="col">
+            </div>
+            <!-- rigth Home  -->
+        </div>
+        <!-- home Contents  -->
+    </div>
+    <!-- bg image  -->
+  </div>
+  <!-- home Section  -->
+  <div class="mt-3">
+
+  </div>
+   <!-- home Section2  -->
+  <div class="borderStyle container">
+    <!-- background  -->
+    <div>
+        <!-- left Side  -->
+        <div class="borderStyle row">
+            <!-- text1  -->
+            <div class="borderStyle col">
+                <span></span>
+            </div>
+            <div class="borderStyle">
+                <span></span>
+            </div>
+            <div class="borderStyle">
+                <span></span>
+            </div>
+            <!-- text1  -->
+
+            <!-- text2  -->
+            <div class="borderStyle">
+                <span></span>
+            </div>
+            <!-- text2  -->
+            <!-- line  -->
+            <div class="borderStyle">
+            </div>
+            <!-- line  -->
+            <!-- text3  -->
+            <div class="borderStyle">
+
+            </div>
+            <!-- text3  -->
+
+            <!-- button  -->
+            <div class="borderStyle">
+
+            </div>
+            <!-- button  -->
+
+        </div>
+        <!-- left Side  -->
+        <!-- right Side  -->
+        <div>
+
+        </div>
+        <!-- right Side  -->
+
+    </div>
+    <!-- background  -->
+
+  </div>
+   <!-- home Section2  -->
+   <!-- <div style="height: 1000px;"></div> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
